--- a/src/componentsCSS/home.css
+++ b/src/componentsCSS/home.css
@@ -4,15 +4,18 @@
     opacity: 0.7;
 }
 .text{
-    position: absolute;
+        position: absolute;
         z-index: 999;
         margin: 0 auto;
         left: 0;
-        right: 0;        
+        right: 0;
         text-align: center;
-        top: 40%; /* Adjust this value to move the positioned div up and down */
+        top: 23%;
+        /*Adjustthisvaluetomovethepositioneddivupanddown*/font-family: Arial,sans-serif;
+        color: rgb(255, 255, 255);
+        width:100%;
+        background-color: #1a1a2e;
+        font-size: 40px;
        
-        font-family: Arial,sans-serif;
-        color: #fff;
-        width: 60%;
 }
+
