--- a/src/componentsCSS/addHistory.css
+++ b/src/componentsCSS/addHistory.css
@@ -3,9 +3,90 @@
     height:100px;
 
 }
+#main1{
+    width: 100%;
+    margin-left: 25px;
+    margin-top: 30px;
+    width: 125px;
+    color: white;
+    font-size: 18px;
+    font-weight: 700px;
+}
 
-.inputfeild{
+#addHistory{
+    min-height: 450px;
+    background-color: rgb(0,0,0,0.5);
+    width: 800px;
+    margin: auto;
+    height: 800px;
+    border-radius:  0px 0px 15px 15px;
+}
 
-    float:left
-    
+#back-ground-span1{
+    background-image: url(../components/House2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 1000px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#houseId,#title,#contractorName{
+    position: relative;
+    left: 200px;
+    top: -37px;
+    line-height: 40px;
+    border-radius: 6px;
+    padding: 0 22px;
+    font-size: 16px;
+}
+
+#description{
+    position: relative;
+    left: 200px;
+    top: -37px;
+    line-height: 40px;
+    width: 500px;
+    border-radius: 6px;
+    padding: 0 22px;
+    font-size: 16px;
+    color: #555;
+}
+
+#beforeImage,#afterImage{
+    position: relative;
+    left: 200px;
+    top: -37px;
+    line-height: 40px;
+    border-radius: 6px;
+    padding: 0 22px;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
+}
+
+.field2{
+    font-size: 20px;
+    font-weight: 4px;
+    position: relative;
+    width: 200px;
+}
+
+button{
+    background-color: #79f1e1;
+    display: block;
+    margin: 20px 0px 0px 20px;
+    text-align: center;
+    border-radius: 12px;
+    border: 2px solid #95d8ee;
+    padding: 14px 110px;
+    outline: none;
+    color: rgb(34, 32, 32);
+    cursor: pointer;
+    transition: 0,25px;
+    position: relative; 
+    left: 250px;
+}
+
+button:hover{
+    background-color: #5390F5;
 }
