--- a/src/componentsCSS/viewHistory.css
+++ b/src/componentsCSS/viewHistory.css
@@ -13,10 +13,11 @@
 }
 
 #back-g{
-    background-image: url(../components/lroom.jpg);
+    background-image: url(../trial2.jpg);
     background-position: center;
     background-size: cover;
     height: 1000px;
+    
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -30,7 +31,7 @@
 }
 
 .tableHistory tr{
-background-color: #380468;
+background-color: #009879;
 color: white;
 font-weight: bold;  
 }
@@ -50,6 +51,6 @@ color:black
 }
 
 .tableHistory tbody tr:last-of-type{
-border-bottom: 2px solid #380468;
+border-bottom: 2px solid #009879;
 }
 
